name:                ytl
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/ivanbakel/ytl#readme
license:             BSD3
license-file:        LICENSE
author:              Isaac van Bakel
maintainer:          ivb@vanbakel.io
copyright:           2020 Isaac van Bakel
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Yesod.Site.Class
                      ,Yesod.Site.Util

                      ,Yesod.Trans
                      ,Yesod.Trans.Class
                      ,Yesod.Trans.Class.Reader
                      ,Yesod.Trans.Class.Writer
                      ,Yesod.Trans.TH

  build-depends:       base >= 4.7 && < 5
                      ,mtl
                      ,pointed
                      ,template-haskell
                      ,yesod-core
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ivanbakel/ytl
